Feat: add admin module
