# dto/admin_login.go
@@ -1,0 +1,34 @@
+package dto
+
+import (
+	"gateway-pj/public"
+	"github.com/gin-gonic/gin"
+	"time"
+)
+
+type AdminLoginInput struct {
+	Username string `json:"username" form:"username" comment:"用户名" example:"admin" validate:"required,is-validuser"`
+	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`
+}
+
+type AdminLoginOutput struct {
+	Token string `json:"token" form:"token" comment:"token" example:"token" validate:""`
+}
+
+type AdminSessionInfo struct {
+	Id        int       `json:"id"`
+	UserName  string    `json:"user_name"`
+	LoginTime time.Time `json:"login_time"`
+}
+
+func (param *AdminLoginInput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, param)
+}
+
+type ChangePwdInput struct {
+	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`
+}
+
+func (param *ChangePwdInput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, param)
+}
